# kdt_devops_lecture_2026_rev2

./: .gitignore  README.md  test.txt
.github/workflows/: ci-gate.yml  dockerhub-publish.yml
agent_tools/aws_doc_research_agent/: PRD.md  README.md  pyproject.toml  template.yaml  tool_schema.json
agent_tools/aws_doc_research_agent/deployment/agentcore/: README.md  handler.py
agent_tools/aws_doc_research_agent/scripts/: check_mcp_import.ps1  smoke_test.ps1
agent_tools/aws_doc_research_agent/src/aws_doc_research_agent/: __init__.py  aws_docs_client.py  cli.py  lambda_handler.py  mcp_remote_server.py  mcp_server.py  models.py  remote_client.py  tools.py
agent_tools/aws_doc_research_agent/src/aws_doc_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_tools/aws_doc_research_agent/src/aws_doc_research_agent/adapters/: __init__.py  strands_tools.py
agent_tools/aws_doc_research_agent/tests/: test_lambda_handler.py  test_remote_client.py  test_tools.py
docs/: codex-agentic-patterns-source-map.md  devops-academic-assessment-standards.md  kubernetes-image-redesign.md  lecture-generation-agent.md  lecture-generation-principles.md  lecture-generation-scoring.md  lecture-tone.md  plan.md  week1-source-pack.md  week1-visual-review.md
out_lecture/: README.md  index.html
out_lecture/week1/: README.md  glossary.md
out_lecture/week2/: README.md  (+1 more)
tools/: build_lecture_pdfs.py  export_lectures.py
week1/: README.md  glossary.md
week2/: README.md
week3/: README.md
week4/: README.md
week5/: README.md  glossary.md
(+696 files in other folders)
